Fixed text alignment on error page (404.html).

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,10 +45,6 @@ span {
     text-transform: capitalize;
 }
 
-#error-page {
-    text-align: center;
-}
-
 /* index page css settings */
 
 .main-area {
